tests/Driver/no-input.sora
// RUN: %sorac 2>&1 | %filecheck %s
// CHECK: error: no input file